﻿shmuel 08.06.2014 22:47:12 +0200 - build 3948

1. Мелкий рефакторинг.

svs 07.06.2014 11:16:01 +0400 - build 3947

1. SQLite 3.8.5

shmuel 06.06.2014 21:35:19 +0200 - build 3946

1. Мелкий рефакторинг.

drkns 06.06.2014 19:00:44 +0200 - build 3945

1. far:ver -> far:about

shmuel 06.06.2014 16:21:30 +0200 - build 3944

1. Запуск Фара far /m запрещает только начальную загрузку макросов, в дальнейшем макросы могут быть
   загружены любым из известных способов.

w17 06.06.2014 12:37:17 +0400 - build 3943

1. ver -> far:ver

drkns 05.06.2014 20:51:49 +0200 - build 3942

1. С форума: ошибка создания автофильтра, если в имени файла присутствовали символы ,;

w17 05.06.2014 16:23:29 +0400 - build 3941

1. M#2250: Непоказ текста в 1251 внутри файла в UTF8
   Можно сменить кодировку при открытии файла, если в текущей файл не может быть открыт без потерь.

drkns 05.06.2014 01:06:34 +0200 - build 3940

1. Падение фара при удалении кастомного panel view mode, если он был установлен на пассивной панели.

2. Туда же добавлено конпкосочетание CtrlShiftEnter - установить режим на пассивной панели.

drkns 04.06.2014 20:11:04 +0200 - build 3939

1. И ещё.

shmuel 04.06.2014 13:52:16 +0200 - build 3938

1. Уточнение 3925.

drkns 03.06.2014 17:35:54 +0200 - build 3937

1. Ещё пара багов в 3934.

drkns 03.06.2014 09:15:51 +0200 - build 3936

1. Пара багов в 3934.

drkns 03.06.2014 03:21:08 +0200 - build 3935

1. GCC.

drkns 03.06.2014 02:42:03 +0200 - build 3934

1. Рандомный рефакторинг.

2. Far обрабатывает команду 'ver', отображая свою версию, версии используемых библиотек и установленных плагинов.

drkns 03.06.2014 02:16:43 +0200 - build 3933

1. 0002687: Меню кодировок: пропадает сепаратор --Other--

shmuel 02.06.2014 18:15:07 +0200 - build 3932

1. Рефакторинг.

shmuel 02.06.2014 00:17:53 +0200 - build 3931

1. Рефакторинг.

shmuel 31.05.2014 17:30:49 +0200 - build 3930

1. Рефакторинг.

shmuel 30.05.2014 23:19:36 +0200 - build 3929

1. Уточнение 3925.
