@@ -1,0 +1,28 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 12.00
+# Visual Studio 14
+VisualStudioVersion = 14.0.21730.1
+MinimumVisualStudioVersion = 10.0.40219.1
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "far", "far.vcxproj", "{62F794C9-5F4C-40F6-B358-5DC1A9D6D2CB}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Win32 = Debug|Win32
+		Debug|x64 = Debug|x64
+		Release|Win32 = Release|Win32
+		Release|x64 = Release|x64
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{62F794C9-5F4C-40F6-B358-5DC1A9D6D2CB}.Debug|Win32.ActiveCfg = Debug|Win32
+		{62F794C9-5F4C-40F6-B358-5DC1A9D6D2CB}.Debug|Win32.Build.0 = Debug|Win32
+		{62F794C9-5F4C-40F6-B358-5DC1A9D6D2CB}.Debug|x64.ActiveCfg = Debug|x64
+		{62F794C9-5F4C-40F6-B358-5DC1A9D6D2CB}.Debug|x64.Build.0 = Debug|x64
+		{62F794C9-5F4C-40F6-B358-5DC1A9D6D2CB}.Release|Win32.ActiveCfg = Release|Win32
+		{62F794C9-5F4C-40F6-B358-5DC1A9D6D2CB}.Release|Win32.Build.0 = Release|Win32
+		{62F794C9-5F4C-40F6-B358-5DC1A9D6D2CB}.Release|x64.ActiveCfg = Release|x64
+		{62F794C9-5F4C-40F6-B358-5DC1A9D6D2CB}.Release|x64.Build.0 = Release|x64
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
