@@ -1,4 +1,8 @@
-﻿shmuel 08.06.2014 22:47:12 +0200 - build 3948
+﻿drkns 09.06.2014 22:12:24 +0200 - build 3949
+
+1. Поддежка VS 14 (CTP), пока с варнингами.
+
+shmuel 08.06.2014 22:47:12 +0200 - build 3948
 
 1. Мелкий рефакторинг.
 
